--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
 
     <div class="game-area">
         <div class="select-game">
-            <!-- check 1 in 6 odds like a die (loop until fail)-->
-            <button data-type="dice" class="btn dice" id="game1">
+            <!-- check 1 in 2 odds like a die (loop until fail) -->
+            <button data-type="coin" class="btn coin">
+                Coin Flip
+            </button>
+            <!-- check 1 in 6 odds like a die (loop until fail) -->
+            <button data-type="dice" class="btn dice">
                 Dice guessing
             </button>
-            <!-- check increasing odds (1 in 2, 1 in 5, 1 in 10, 1 in 20, 1 in 50, 1 in 100 - restart)-->
-            <button data-type="decreasing" class="btn decreasing" id="game2">
-                Decreasing odds
-            </button>
-            <!-- 6 times 1 in 49, after one another or maybe all together -->
-            <button data-type="lottery" class="btn lottery" id="game3">
+            <!-- 6 times 1 in 49, after one another -->
+            <button data-type="lottery" class="btn lottery">
                 Lottery
             </button>
         </div>
-        <div class="game-type">
+        <div class="game-info">
             <h3>The game you are playing is: <span id="game">?</span></h3>
             <p>Game explanation: <br> <span id="explanation">Explanation</span></p>
         </div>
@@ -59,7 +59,7 @@
         </div>
         <button data-type="submit" class="btn-submit">Submit your guess</button>
         <div class="answer">
-            <p class="hide">The number you are supposed to guess is: <span id="number">?</span></p>
+            <p class="hide">The number you are supposed to guess is: <span id="number">0</span></p>
         </div>
     </div>
 
