Added Buttons and eventlisteners to add second game type

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
     </div>
 
     <div class="game-area">
+        <div>
+            <button data-type="coin" class="btn">
+                <p>Coin flip</p>
+            </button>
+            <button data-type="die" class="btn">
+                <p>Roll a die</p>
+            </button>
+        </div>
         <div class="game-info">
             <p>Game explanation: <br> <span id="explanation">Find the number between 1 and 6</span></p>
         </div>
