maint: added more structure to code

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
         <!-- Buttons for choosing game -->
         <div>
             <!-- Coin flip game -->
-            <button data-type="coin" class="btn">
+            <button data-type="coin" class="btn coin">
                 <i class="fa-solid fa-circle-half-stroke"></i>
             </button>
             <!-- Dice roll game -->
-            <button data-type="die" class="btn">
+            <button data-type="die" class="btn dice">
                 <i class="fa-solid fa-dice"></i>
             </button>
         </div>
-        
+
         <!-- Game information display (changing with gametype - not yet implemented) -->
         <div class="game-info">
             <p>Game explanation: <br> <span id="explanation">Find the number between 1 and 2</span></p>
