feat: display different logo corresponding to game

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
                 <a href="https://unsplash.com/photos/grayscale-photography-of-person-holding-coin-b4D7FKAghoE?utm_content=creditCopy
                 Text&utm_medium=referral&utm_source=unsplash">Unsplash</a> 
         -->
-        <img class="logo" src="assets/images/zsun-fu-b4D7FKAghoE-unsplash.jpg" alt="A coin ready to be tossed">
+        <img class="logo" id="logo-coin" src="assets/images/zsun-fu-b4D7FKAghoE-unsplash.jpg" alt="A coin ready to be tossed">
+
+        <!-- img source: assets/images/erik-mclean-C3T8KTZxTFM-unsplash.jpg -->
+        <img class="logo" id="logo-die" src="assets/images/erik-mclean-C3T8KTZxTFM-unsplash.jpg"
+            alt="Big black die gets trown into the air">
     </h1>
 
     <div class="username-input">
