maint: fixed validation errors

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <h1 class="heading">
+    <div class="heading">
         <h1 id="head">Guess the right numbers!</h1>
         <!-- 
             Photo by <a href="https://unsplash.com/@zisun_word?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
@@ -35,11 +35,11 @@
         <!-- img source: assets/images/erik-mclean-C3T8KTZxTFM-unsplash.jpg -->
         <img class="logo" id="logo-die" src="assets/images/erik-mclean-C3T8KTZxTFM-unsplash.jpg"
             alt="Big black die gets trown into the air">
-    </h1>
+    </div>
 
     <div class="username-input">
         <!-- Username input required to play the game -->
-        <label for="username" name="username">Create Username:</label>
+        <label for="username">Create Username:</label>
         <br>
         <input type="text" name="username" id="username" placeholder="Your Username" required>
         <button type="submit" id="usernamesubmit" class="hide">Submit</button>
