--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <!-- Buttons for choosing game -->
                 <div>
                     <!-- Coin flip game -->
-                    <label for="green">Easy</label>
+                    <label for="green">Easy: Coin toss</label>
                     <br>
                     <button id="green" data-type="coin" class="btn coin" aria-label='Play the game "Toss the coin"'>
                         <i class="fa-solid fa-circle-half-stroke"></i>
@@ -60,7 +60,7 @@
                 </div>
                 <div>
                     <!-- Dice roll game -->
-                    <label for="red">Hard</label>
+                    <label for="red">Hard: Roll a die</label>
                     <br>
                     <button id="red" data-type="die" class="btn dice" aria-label='Play the game "Roll the die"'>
                         <i class="fa-solid fa-dice"></i>
