--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             <tbody id="highscore">
             </tbody>
         </table>
+        <button onclick="deleteRow()" id="delete" class="btn-small hide">Delete last username</button>
     </div>
 
     <script src="assets/js/script.js"></script>
