readme update for new delete button

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <tbody id="highscore">
             </tbody>
         </table>
-        <button onclick="deleteRow()" id="delete" class="btn-small hide">Delete last username</button>
+        <button onclick="deleteRow()" id="delete" class="btn-small hide">Delete last user</button>
     </div>
 
     <script src="assets/js/script.js"></script>
