maint: deleted unused code, added comments and changed heading

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div id="username-input">
         <!-- Username input required to play the game -->
-        <label for="username">Create Username:</label>
+        <label for="username">Enter a username and submit to start</label>
         <br>
         <input type="text" name="username" id="username" placeholder="Your Username" required>
         <button type="submit" id="usernamesubmit">Submit</button>
